app/stylesheets/templates/_listing.scss
.card {
  background-color:$blog-listing-block-background;
  margin-right: 20px;
  margin-top: 20px;
  max-width: 325px;
  min-height: 450px;

  &:nth-child(3n+3) {
    margin-right: 0;
  }

  &__link {
    height: 100%;
    text-decoration: none;
    width: 100%;

    &:hover {
      .card__info .card__read-more {
        text-decoration: underline;
      }
    }
  }

  &__media {
    background-position: center center;
    background-size: cover;
    height: 50%;
  }

  &__info {
    color: $blog-listing-block-text-color;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 50%;
    padding: 20px;
  }

  &__excerpt {
    @include font-size(1.6)
    color: $blog-listing-block-text-color;
  }

  &__read-more {
    @include font-size(1.8);
    color: $blog-listing-read-more-color;
    font-weight: 700;
    text-transform: uppercase;
  }
}

@media only screen and (max-width: 1115px) {
  .card {

    &:nth-child(3n+3) {
      margin-right: 20px;
    }
  }
}

@media only screen and (max-width: 768px) {
  .col-4 {
    width: 48%;
  }

  .card {
    margin-right: 20px;

    &:nth-child(even) {
      margin-right: 0;
    }
  }
}

@media only screen and (max-width: 650px) {
  .col-4 {
    width: 100%;
  }

  .card {
    margin: 0 0 20px 0;
  }
}

